﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* Common changes
================
* Performance improvements

- KGySoft.Drawing namespace
===========================
- ImageExtensions class:
  - SaveAsIcon: Fixing alpha values when the source image has 32bpp PARGB pixel format.


~~~~~~~~~
! v7.1.0:
~~~~~~~~~

! Common changes
================
! From now on alpha blending operations on Bitmap instances (eg. DrawInto extensions) are performed in the linear
  color space for 48/64 bpp pixel formats on Windows. To use a specific color space regardless of the pixel format
  obtain a managed bitmap data by the new GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData
  extension method overloads with WorkingColorSpace parameters and use the platform independent extension methods
  (eg. BitmapDataExtensions from the KGySoft.Drawing.Core package) instead.

+ KGySoft.Drawing namespace
===========================
+ BitmapExtensions class:
  + New GetReadableBitmapData overload with WorkingColorSpace parameter.
  + New GetWritableBitmapData overload with WorkingColorSpace parameter.
  + New GetReadWriteBitmapData overload with WorkingColorSpace parameter.


~~~~~~~~~
! v7.0.0:
~~~~~~~~~

! Assembly changes:
===================
! APIs that are not dependent on System.Drawing.Common (.NET Core/Standard 2.0 and above) have been extracted into a
  new library, KGySoft.Drawing.Core, which is now referenced by this library.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
! Targeting also .NET 7. Indicated as a breaking change because if a consumer project also targets .NET 7 or newer,
  then this library can be used only on Windows. When targeting .NET 6 or earlier platforms, Unix/Linux is still